fix position color theme btn on mobile

--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -8,13 +8,17 @@
   height: 30px;
   width: 60px;
   position: absolute;
-  bottom: 10%;
+  bottom: 50%;
   right: 5%;
   border-radius: 34px;
   box-shadow: white 0px 0px 0px 3px;
   z-index: 2;
 
   transition: box-shadow 250ms linear;
+  
+  @media screen and (min-width: 768px) {
+    bottom: 10%;
+  }
 
   &:hover,
   &:focus {
